Update and rename drum_masters.htm to index.htm

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-    Level <input type="text" id="int_peak" value="200" size="3">@200 ‘å=ˆÕ---------¬=“ï 20<br />
+    Level <input type="text" id="int_peak" value="200" size="3"> 200 å¤§ï¼æ˜“---------å°ï¼é›£ 20<br />
     <input type="file" id="file_slct"><br />
     <audio id="auo" ></audio><br />
     <input type="hidden" id="blk_count" value="0">
@@ -92,7 +92,6 @@
               auo.src='';
             }else{
               if(int_peak > document.getElementById("int_peak").value){
-                //????log??
                 //console.log(int_peak)
                 put_red_mark1("b" + blk_count.value);
               }
